--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "bootstrap": "^4.5.0",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.15.0",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.5",
+    "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-manifest": "^2.4.9",
     "gatsby-plugin-offline": "^3.2.7",
     "gatsby-plugin-react-helmet": "^3.3.2",
@@ -14,11 +18,16 @@
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-sharp": "^2.5.3",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "query-string": "^6.13.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "uniqid": "^5.2.0"
   },
   "devDependencies": {
+    "mocha": "^7.2.0",
     "prettier": "2.0.5"
   },
   "keywords": [
@@ -32,7 +41,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha **/*.tests.js"
   },
   "repository": {
     "type": "git",
