--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "./node_modules/mocha/bin/mocha **/*.tests.js"
+    "test": "./node_modules/mocha/bin/mocha ./src/**/*.tests.js"
   },
   "repository": {
     "type": "git",
