--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,8 @@ jobs:
       - checkout
       - node/with-cache:
         steps:
-          -run: surge --project ../public --domain georgefloyd.help
+          -run: 
+            command: surge --project ../public --domain georgefloyd.help
 workflows:
     build-and-test:
       jobs:
