--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - checkout
       - run: npm install
+      - run: npm build
       - run: surge --project ../public --domain georgefloyd.help
 workflows:
     build-and-test:
