--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - checkout
       - run: npm install
       - run: npm run build
-      - run: npx surge --project ./public --domain www.georgefloyd.help
+      - run: npx surge --project ./public --domain ${DOMAIN_NAME}
 workflows:
     build-and-test:
       jobs:
