--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
 jobs:
-  build-and-test:
+  test:
     executor:
       name: node/default
     steps:
@@ -20,16 +20,13 @@ jobs:
       - run: npm run build
       - run: npx surge --project ./public --domain ${DOMAIN_NAME}
 workflows:
-    build-and-test:
+    test:
       jobs:
-        - build-and-test
+        - test
       
     deploy-to-web:
       jobs:
-        - build-and-test
         - deploy-to-web:
-            requires:
-              - build-and-test
             filters:
               branches:
                 only: prod
